--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -65,13 +65,21 @@
           <div class="r-a-c-p-field">
             <label>Display Name</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSName1" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSName1"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field">
             <label>iCabbi Vehicle Attribute</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSType1" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSType1"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field"></div>
@@ -81,13 +89,21 @@
           <div class="r-a-c-p-field">
             <label>Display Name</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSName2" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSName2"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field">
             <label>iCabbi Vehicle Attribute</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSType2" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSType2"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field"></div>
@@ -97,13 +113,21 @@
           <div class="r-a-c-p-field">
             <label>Display Name</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSName3" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSName3"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field">
             <label>iCabbi Vehicle Attribute</label>
             <div class="inp-con">
-              <input [(ngModel)]="vBSType3" [disabled]="!btn3" />
+              <input
+                style="width: 150px"
+                [(ngModel)]="vBSType3"
+                [disabled]="!btn3"
+              />
             </div>
           </div>
           <div class="r-a-c-p-field"></div>
