--- a/src/app/screens/bot-settings/bot-settings.component.css
+++ b/src/app/screens/bot-settings/bot-settings.component.css
@@ -580,3 +580,110 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
 }
+
+.top {
+  /* background: url(../../../assets/img/block.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; */
+  position: relative;
+  border-radius: 0.6rem;
+  padding: 20px;
+  margin-top: 2rem;
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  border-radius: 20px;
+  border: 1px solid rgba(46, 188, 150, 0.5);
+  background: rgba(46, 188, 150, 0.2);
+}
+
+.top img {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: -40px;
+  left: 1rem;
+}
+
+.top button {
+  /* position: absolute;
+  top: 1rem;
+  right: 1rem; */
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-radius: 4.325px;
+  background: #fff;
+  box-shadow: 0px 0px 4.325px 0px rgba(0, 0, 0, 0.1);
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.top p {
+  color: #737791;
+  /* text-align: center; */
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: 0.36px;
+  margin-bottom: 0;
+}
+
+.top_t {
+  /* position: absolute;
+  top: 1rem;
+  left: 1rem; */
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.top_t span {
+  color: var(--dark-color, #181818);
+
+  /* Texi */
+  font-family: Nunito;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+  white-space: nowrap;
+}
+
+.airport-help-con span {
+  display: none;
+  color: white;
+  background: darkslategray;
+  padding: 3px;
+  border-radius: 4px;
+}
+
+.airport-help-con img {
+  width: 20px;
+}
+
+.airport-help-con:hover span {
+  display: inline;
+}
+
+.address-search-h-c:hover span {
+  display: inline;
+}
+
+.address-search-h-c span {
+  display: none;
+  color: white;
+  background: darkslategray;
+  padding: 3px;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: 200;
+}
