--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="c-bg-heading">Vehical Buttons Settings</div>
+    <div class="c-bg-heading">Vehicle Buttons Settings</div>
     <div class="r-a-c-p">
       <div
         class="r-a-c-p-left"
@@ -150,17 +150,41 @@
         <div class="r-a-c-p-field">
           <label>Pickup Search Centre Point </label>
           <div class="inp-con">
-            <input
-              [(ngModel)]="pickupLatitude"
-              type="number"
-              [disabled]="!btn4"
-            />
+            <div style="width: 100%; position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                "
+              >
+                Latitude
+              </p>
+              <input
+                [(ngModel)]="pickupLatitude"
+                type="number"
+                [disabled]="!btn4"
+              />
+            </div>
             <span>:</span>
-            <input
-              [(ngModel)]="pickupLongitude"
-              type="number"
-              [disabled]="!btn4"
-            />
+            <div style="width: 100%; position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                "
+              >
+                Longitude
+              </p>
+              <input
+                [(ngModel)]="pickupLongitude"
+                type="number"
+                [disabled]="!btn4"
+              />
+            </div>
           </div>
         </div>
         <div class="r-a-c-p-field">
@@ -176,17 +200,42 @@
         <div class="r-a-c-p-field">
           <label>Destination Search Center Point</label>
           <div class="inp-con">
-            <input
-              [(ngModel)]="destinationLatitude"
-              type="number"
-              [disabled]="!btn4"
-            />
+            <div style="width: 100%; position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                "
+              >
+                Latitude
+              </p>
+              <input
+                [(ngModel)]="destinationLatitude"
+                type="number"
+                [disabled]="!btn4"
+              />
+            </div>
+
             <span>:</span>
-            <input
-              [(ngModel)]="destinationLongitude"
-              type="number"
-              [disabled]="!btn4"
-            />
+            <div style="width: 100%; position: relative">
+              <p
+                style="
+                  position: absolute;
+                  top: -20px;
+                  left: 50%;
+                  transform: translateX(-50%);
+                "
+              >
+                Longitude
+              </p>
+              <input
+                [(ngModel)]="destinationLongitude"
+                type="number"
+                [disabled]="!btn4"
+              />
+            </div>
           </div>
         </div>
         <div class="r-a-c-p-field">
@@ -348,10 +397,58 @@
       </div>
     </div>
   </div>
-  <div class="c-bg-heading">Query list</div>
+  <div class="c-bg-heading address-search-h-c">
+    Address searching <img src="../../../assets/warning.png" width="20px" />
+    <span
+      >Customers might enter a location differently from how it is saved in your
+      dispatch system. For example, they might type "Vodka Revs," while your
+      system stores it as "Revolution."
+    </span>
+  </div>
+  <div class="top">
+    <p>
+      <span style="font-weight: 500; color: black"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="15"
+          height="15"
+          viewBox="0 0 20 20"
+          fill="none"
+        >
+          <path
+            d="M9 5H11V7H9V5ZM10 15C10.55 15 11 14.55 11 14V10C11 9.45 10.55 9 10 9C9.45 9 9 9.45 9 10V14C9 14.55 9.45 15 10 15ZM10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+            fill="#636364"
+          />
+        </svg>
+        Important Message:</span
+      >
+      Customers might type a location or commonly refer to it differently than
+      is saved in your dispatch system, an example might be Vodka Revs, but in
+      your dispatch system it's saved as Revolution. By adding alternatives the
+      chatbot knows to search for an address that the system recognises when the
+      user has not sent an address it recognises.
+    </p>
+    <button>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="11"
+        height="11"
+        viewBox="0 0 11 11"
+        fill="none"
+      >
+        <path
+          d="M9.9751 9.675L0.892618 1.32498M9.9751 1.32498L0.892618 9.675"
+          stroke="#2EBC96"
+          stroke-width="1.2975"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </button>
+  </div>
   <div class="q-l">
     <div class="q-l-tags">
-      <h1>User Query</h1>
+      <h1>Customer Enters</h1>
       <div class="q-l-t-bot">
         <button class="new" (click)="addToQuery()">
           <svg
@@ -434,7 +531,7 @@
     </div>
 
     <div class="q-l-alt">
-      <h1>Alternatives</h1>
+      <h1>Address to Search</h1>
       <div class="field">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -464,7 +561,16 @@
             name="airport"
             id="airport"
           />
-          <label for="airport">Airpot Address</label>
+          <div class="airport-help-con">
+            <label for="airport"
+              >Airport Address
+              <img class="airport-help-img" src="../../../assets/warning.png" />
+            </label>
+            <span
+              >By marking it as an airport address, the system will prompt for a
+              flight number when a booking is placed.</span
+            >
+          </div>
         </div>
         <button *ngIf="!isEditQuery" (click)="addAirport()">Add</button>
 
@@ -485,8 +591,8 @@
 
     <div class="q-l-table">
       <div class="q-l-t-header">
-        <span>Bot Query</span>
-        <span>User Queries</span>
+        <span>Address to search </span>
+        <span>Customer enters</span>
       </div>
       <div class="query-code-list">
         <div class="qry-list-item" *ngFor="let qry of queryList; let i = index">
