--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -138,6 +138,10 @@
   /* padding-bottom: .34rem; */
 }
 
+.ic_top textarea {
+  height: 50px;
+}
+
 .top {
   background-color: transparent;
 }
@@ -272,7 +276,7 @@
   gap: 10px;
   /* flex-wrap: wrap; */
   padding: 0 10px;
-  height: 520px;
+  height: 420px;
 }
 
 .msg-box {
@@ -294,7 +298,7 @@
 .imp-banner {
   background: rgba(46, 188, 150, 0.2);
   border: 1px solid rgba(46, 188, 150, 0.5);
-  padding: 20px;
+  padding: 10px;
   border-radius: 20px;
   width: 95%;
   margin: auto;
@@ -314,6 +318,7 @@
 .imp-banner p {
   color: #737791;
   text-align: center;
+  margin-bottom: 0;
 }
 
 .emoji-tab {
