--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -189,13 +189,14 @@
         </div>
       </div>
       <div class="imp-banner">
-        <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
         <p>
+          <span style="font-weight: 400; color: black"
+            ><img src="../../../assets/info-icon.png" /> Important Note:</span
+          >
           Please note that “not sent” , might be because target is not valid
           mobile or international number or your settings are configured not be
           send this Message type by SMS.
-        </p>
-        <p>
+          <br />
           Device sending is limited to avoid bans , these limits are gradually
           reduced to mitigate that risk.
         </p>
