--- a/src/app/screens/block-list/block-list.component.css
+++ b/src/app/screens/block-list/block-list.component.css
@@ -308,7 +308,7 @@
 
 .top p {
   color: #737791;
-  text-align: center;
+  text-align: left;
   font-family: Poppins;
   font-size: 1rem;
   font-style: normal;
