--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -230,8 +230,10 @@
         instanceData[2].isEditable
       "
     >
-      <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
       <p>
+        <span style="font-weight: 400; color: black"
+          ><img src="../../../assets/info-icon.png" /> Important Note:</span
+        >
         Sending too many URLs can increase the risk of a WhatsApp account ban
         due to spam-detection policies. Ensure all messages are relevant and
         provide clear value to recipients. Avoid repetitive or promotional
