--- a/src/app/screens/qr-page/qr-page.component.css
+++ b/src/app/screens/qr-page/qr-page.component.css
@@ -239,6 +239,31 @@ h2 {
   letter-spacing: 0.54px;
 }
 
+.main-right-qr {
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px 20px;
+  width: 80%;
+  flex: 1;
+  /* aspect-ratio: 354/438; */
+  border: 2px dashed lightgray;
+}
+
+.main-right-qr div button {
+  width: 200px !important;
+  padding: 10px 0 !important;
+  height: auto !important;
+  font-weight: 300 !important;
+  font-size: 12px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  gap: 10px !important;
+}
+
 .qr-banner {
   width: 100%;
   /* aspect-ratio: 1482/332; */
@@ -786,4 +811,113 @@ h2 {
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.54px;
+}
+
+.cus-modal {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 24px;
+}
+
+.cus-modal-1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cus-modal-1 h1 {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 42px; /* 123.529% */
+  letter-spacing: -0.68px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.cus-modal-1 h1 img {
+  width: 20px;
+}
+
+.cus-modol-1-btn-con {
+  display: flex;
+  gap: 10px;
+}
+
+.cus-modol-1-btn-con button {
+  border-radius: 8px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+  border: none;
+  display: flex;
+  height: 52px;
+  padding: 10px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: white;
+}
+
+.cus-modal-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px 20px;
+  border-radius: 70px;
+  background: #f1f5f9;
+  width: fit-content;
+}
+
+.cus-modal-2 div {
+  padding: 10px 15px;
+  color: var(--text, #636364);
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.48px;
+  cursor: pointer;
+}
+
+.cus-modal-2 div.active {
+  border-radius: 58px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+  box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+  color: white;
+}
+
+.cus-modal-3 {
+  display: flex;
+  gap: 10px;
+}
+
+.cus-modal-3-settings,
+.cus-modal-3-qr {
+  width: 50%;
+  border: 1px dashed lightgrey;
+  border-radius: 13px;
+  padding: 24px;
+}
+
+.cus-modal-3-settings {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.cus-modal-setting-h {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 42px; /* 210% */
+  letter-spacing: -0.4px;
+  margin-bottom: 0;
 }
