--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -1,4 +1,96 @@
 <main>
+  <app-modal *ngIf="openUniversalQrCustomize">
+    <div class="cus-modal">
+      <div class="cus-modal-1">
+        <h1>Design your QR <img src="../../../assets/warning.png" /></h1>
+        <div class="cus-modol-1-btn-con">
+          <button>Save Changes</button>
+          <button>
+            <svg
+              width="21"
+              height="21"
+              viewBox="0 0 21 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M14.1713 7.53589C14.3665 7.34063 14.3665 7.02405 14.1713 6.82878C13.976 6.63352 13.6594 6.63352 13.4642 6.82878L14.1713 7.53589ZM6.67595 13.617C6.48069 13.8123 6.48069 14.1289 6.67595 14.3241C6.87121 14.5194 7.18779 14.5194 7.38306 14.3241L6.67595 13.617ZM13.4642 14.3241C13.6594 14.5194 13.976 14.5194 14.1713 14.3241C14.3665 14.1289 14.3665 13.8123 14.1713 13.617L13.4642 14.3241ZM7.38306 6.82878C7.18779 6.63352 6.87121 6.63352 6.67595 6.82878C6.48069 7.02405 6.48069 7.34063 6.67595 7.53589L7.38306 6.82878ZM16.8583 17.0111C13.3045 20.5649 7.54271 20.5649 3.98894 17.0111L3.28184 17.7182C7.22613 21.6625 13.6211 21.6625 17.5654 17.7182L16.8583 17.0111ZM3.98894 17.0111C0.435172 13.4573 0.435172 7.69555 3.98894 4.14178L3.28184 3.43467C-0.662459 7.37897 -0.662459 13.7739 3.28184 17.7182L3.98894 17.0111ZM3.98894 4.14178C7.54271 0.588007 13.3045 0.588007 16.8583 4.14178L17.5654 3.43467C13.6211 -0.509624 7.22613 -0.509624 3.28184 3.43467L3.98894 4.14178ZM16.8583 4.14178C20.4121 7.69555 20.4121 13.4573 16.8583 17.0111L17.5654 17.7182C21.5097 13.7739 21.5097 7.37897 17.5654 3.43467L16.8583 4.14178ZM13.4642 6.82878L10.0701 10.2229L10.7772 10.93L14.1713 7.53589L13.4642 6.82878ZM10.0701 10.2229L6.67595 13.617L7.38306 14.3241L10.7772 10.93L10.0701 10.2229ZM14.1713 13.617L10.7772 10.2229L10.0701 10.93L13.4642 14.3241L14.1713 13.617ZM10.7772 10.2229L7.38306 6.82878L6.67595 7.53589L10.0701 10.93L10.7772 10.2229Z"
+                fill="white"
+              />
+            </svg>
+            Close
+          </button>
+        </div>
+      </div>
+
+      <div class="cus-modal-2">
+        <svg
+          width="20"
+          height="21"
+          viewBox="0 0 20 21"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9 5.5H11V7.5H9V5.5ZM10 15.5C10.55 15.5 11 15.05 11 14.5V10.5C11 9.95 10.55 9.5 10 9.5C9.45 9.5 9 9.95 9 10.5V14.5C9 15.05 9.45 15.5 10 15.5ZM10 0.5C4.48 0.5 0 4.98 0 10.5C0 16.02 4.48 20.5 10 20.5C15.52 20.5 20 16.02 20 10.5C20 4.98 15.52 0.5 10 0.5ZM10 18.5C5.59 18.5 2 14.91 2 10.5C2 6.09 5.59 2.5 10 2.5C14.41 2.5 18 6.09 18 10.5C18 14.91 14.41 18.5 10 18.5Z"
+            fill="#636364"
+          />
+        </svg>
+        <div
+          (click)="setModalActive(0)"
+          [class.active]="activeModalIndex === 0"
+        >
+          Shape
+        </div>
+        <div
+          (click)="setModalActive(1)"
+          [class.active]="activeModalIndex === 1"
+        >
+          Eyes
+        </div>
+        <div
+          (click)="setModalActive(2)"
+          [class.active]="activeModalIndex === 2"
+        >
+          Background
+        </div>
+        <div
+          (click)="setModalActive(3)"
+          [class.active]="activeModalIndex === 3"
+        >
+          Logo
+        </div>
+        <div
+          (click)="setModalActive(4)"
+          [class.active]="activeModalIndex === 4"
+        >
+          Error Level
+        </div>
+      </div>
+
+      <div class="cus-modal-3">
+        <div *ngIf="activeModalIndex == 0" class="cus-modal-3-settings">
+          <div class="cus-modal-3">
+            <p class="cus-modal-setting-h">Choose a style</p>
+          </div>
+        </div>
+        <div class="cus-modal-3-qr">
+          <ngx-qrcode-styling
+            *ngIf="universalQrString.length > 0"
+            #qrCodeElem
+            [width]="220"
+            [height]="220"
+            [data]="universalQrString"
+            [dotsOptions]="{ color: '#000', type: 'rounded' }"
+            [backgroundOptions]="{ color: '#fff' }"
+            [image]="'assets/logo.png'"
+            [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+          >
+          </ngx-qrcode-styling>
+        </div>
+      </div>
+    </div>
+  </app-modal>
   <div class="nav">
     <img src="../../../assets/info-icon.png" />
     <button
@@ -39,10 +131,11 @@
       Up Your Universal QR Code
     </h2>
     <div class="note-banner">
-      <strong
-        ><img src="../../../assets/info-icon.png" /> Important Note:
-      </strong>
       <p>
+        <span style="font-weight: 400; color: black"
+          ><img style="width: 15px" src="../../../assets/info-icon.png" />
+          Important Note:
+        </span>
         Create a Universal QR Code for instant taxi bookings, allowing users to
         scan and access the Taxi Messages chatbot seamlessly. Easily customize
         your QR, update details anytime, and download it in PDF, PNG, or JPG
@@ -88,21 +181,11 @@
             placeholder="Type here"
           />
         </div>
-        <div class="left-btn-con">
-          <button *ngIf="!universalQrData" (click)="generateUniversalQRCode()">
-            Generate QR Code
-          </button>
-          <button *ngIf="universalQrData">Save & View Stats</button>
-          <button
-            *ngIf="universalQrData"
-            (click)="generateUniversalQRCode()"
-            style="width: 150px"
-          >
-            Edit Details
-          </button>
+        <div class="left-btn-con" *ngIf="!universalQrData">
+          <button (click)="generateUniversalQRCode()">Generate QR Code</button>
         </div>
       </div>
-      <div class="main-right">
+      <div class="main-right" *ngIf="!universalQrData">
         <!-- <div>
           <button *ngIf="!universalQrData">
             <img src="../../../assets/refresh-white.png" />
@@ -112,131 +195,129 @@
           </button>
         </div> -->
         <div class="qr-con">
-          <img
-            *ngIf="!universalQrData"
-            class="qr-gif"
-            src="../../../assets/qr-gif.gif"
-          />
-          <img
-            *ngIf="!universalQrData"
-            class="qr-code"
-            src="../../../assets/empty-qr-area.png"
-          />
-          <qrcode
-            class="qr-code"
-            *ngIf="universalQrData"
-            [qrdata]="universalQrData"
-            [errorCorrectionLevel]="'M'"
-            [width]="300"
-          ></qrcode>
+          <img class="qr-gif" src="../../../assets/qr-gif.gif" />
+          <img class="qr-code" src="../../../assets/empty-qr-area.png" />
         </div>
         <p class="main-right-info-text" *ngIf="!universalQrData">
           Click the "Generate" button to create a QR code
         </p>
+
+        <!-- <button>
+            <img src="../../../assets/download-white.png" />
+            Download QR Code
+          </button> -->
+      </div>
+      <div class="main-right-qr" *ngIf="universalQrData">
+        <ngx-qrcode-styling
+          *ngIf="universalQrString.length > 0"
+          #qrCodeElem
+          [width]="220"
+          [height]="220"
+          [data]="universalQrString"
+          [dotsOptions]="{ color: '#000', type: 'rounded' }"
+          [backgroundOptions]="{ color: '#fff' }"
+          [image]="'assets/logo.png'"
+          [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+        >
+        </ngx-qrcode-styling>
         <div
           style="
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            gap: 10px;
           "
         >
-          <div
-            *ngIf="universalQrData"
+          <button
             style="
               display: flex;
-              justify-content: center;
+              width: 60%;
+              height: 41px;
+              align-items: center;
               gap: 10px;
-              width: 450px;
+              border-radius: 5px;
+              border: 1px solid rgba(0, 0, 0, 0.2);
+              box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+              background: white;
+              color: var(--dark-color, #181818);
+              text-align: center;
+              font-family: Nunito;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              letter-spacing: 0.54px;
             "
           >
-            <button
-              style="
-                display: flex;
-                width: 60%;
-                height: 41px;
-                align-items: center;
-                gap: 10px;
-                border-radius: 5px;
-                border: 1px solid rgba(0, 0, 0, 0.2);
-                box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
-                background: white;
-                color: var(--dark-color, #181818);
-                text-align: center;
-                font-family: Nunito;
-                font-size: 18px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-                letter-spacing: 0.54px;
-              "
+            <svg
+              width="20"
+              height="21"
+              viewBox="0 0 20 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
             >
-              <svg
-                width="20"
-                height="21"
-                viewBox="0 0 20 21"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M1.59998 13.7199L1.59998 17.4257C1.59998 17.9874 1.82123 18.526 2.21505 18.9231C2.60888 19.3203 3.14302 19.5434 3.69998 19.5434H16.3C16.8569 19.5434 17.3911 19.3203 17.7849 18.9231C18.1787 18.526 18.4 17.9874 18.4 17.4257V13.7199M10.0011 1.45667V13.4567M10.0011 13.4567L14.8011 8.87151M10.0011 13.4567L5.20115 8.87151"
-                  stroke="black"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              Download QR Code
-            </button>
-            <button
-              style="
-                display: flex;
-                width: 40%;
-                height: 41px;
-                align-items: center;
-                gap: 10px;
-                border-radius: 5px;
-                border: 1px solid rgba(0, 0, 0, 0.2);
-                box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
-                background: white;
-                color: var(--dark-color, #181818);
-                text-align: center;
-                font-family: Nunito;
-                font-size: 18px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-                letter-spacing: 0.54px;
-              "
+              <path
+                d="M1.59998 13.7199L1.59998 17.4257C1.59998 17.9874 1.82123 18.526 2.21505 18.9231C2.60888 19.3203 3.14302 19.5434 3.69998 19.5434H16.3C16.8569 19.5434 17.3911 19.3203 17.7849 18.9231C18.1787 18.526 18.4 17.9874 18.4 17.4257V13.7199M10.0011 1.45667V13.4567M10.0011 13.4567L14.8011 8.87151M10.0011 13.4567L5.20115 8.87151"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            Download QR
+          </button>
+          <button
+            style="
+              display: flex;
+              width: 40%;
+              height: 41px;
+              align-items: center;
+              gap: 10px;
+              border-radius: 5px;
+              border: 1px solid rgba(0, 0, 0, 0.2);
+              box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+              background: white;
+              color: var(--dark-color, #181818);
+              text-align: center;
+              font-family: Nunito;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              letter-spacing: 0.54px;
+            "
+          >
+            <svg
+              width="18"
+              height="19"
+              viewBox="0 0 18 19"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
             >
-              <svg
-                width="18"
-                height="19"
-                viewBox="0 0 18 19"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M14.1625 7.47502H16.1875C16.7467 7.47502 17.2 7.92834 17.2 8.48752L17.2 15.6C17.2 16.7046 16.3046 17.6 15.2 17.6L8.0875 17.6C7.52831 17.6 7.075 17.1467 7.075 16.5875V14.5625M9.1 1.40002L3.025 1.40002C1.90662 1.40002 1 2.30665 1 3.42502L1 9.50002C1 10.6184 1.90662 11.525 3.025 11.525L9.1 11.525C10.2184 11.525 11.125 10.6184 11.125 9.50002L11.125 3.42502C11.125 2.30665 10.2184 1.40003 9.1 1.40002Z"
-                  stroke="black"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                />
-              </svg>
-              Copy Link
-            </button>
-          </div>
+              <path
+                d="M14.1625 7.47502H16.1875C16.7467 7.47502 17.2 7.92834 17.2 8.48752L17.2 15.6C17.2 16.7046 16.3046 17.6 15.2 17.6L8.0875 17.6C7.52831 17.6 7.075 17.1467 7.075 16.5875V14.5625M9.1 1.40002L3.025 1.40002C1.90662 1.40002 1 2.30665 1 3.42502L1 9.50002C1 10.6184 1.90662 11.525 3.025 11.525L9.1 11.525C10.2184 11.525 11.125 10.6184 11.125 9.50002L11.125 3.42502C11.125 2.30665 10.2184 1.40003 9.1 1.40002Z"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+              />
+            </svg>
+            Copy Link
+          </button>
+
+          <button
+            style="
+              width: 450px;
+              height: 50px;
+              display: flex;
+              align-items: center;
+            "
+            *ngIf="universalQrData"
+            (click)="openUniversalQrCustomize = true"
+          >
+            Customize QR Code
+          </button>
         </div>
-        <button
-          style="width: 450px; height: 50px; display: flex; align-items: center"
-          *ngIf="universalQrData"
-        >
-          Customize QR Code
-        </button>
-        <!-- <button>
-            <img src="../../../assets/download-white.png" />
-            Download QR Code
-          </button> -->
       </div>
     </div>
   </div>
@@ -325,13 +406,23 @@
             class="qr-code"
             src="../../../assets/empty-qr-area.png"
           />
-          <qrcode
+          <!-- <qrcode
             class="qr-code"
             *ngIf="smartQrData"
             [qrdata]="smartQrData"
             [errorCorrectionLevel]="'M'"
             [width]="200"
-          ></qrcode>
+          ></qrcode> -->
+          <ngx-qrcode-styling
+            [width]="300"
+            [height]="300"
+            [data]="'https://zentobyte.com'"
+            [dotsOptions]="{ color: '#000', type: 'rounded' }"
+            [backgroundOptions]="{ color: '#fff' }"
+            [image]="'assets/logo.png'"
+            [imageOptions]="{ crossOrigin: 'anonymous', margin: 10 }"
+          >
+          </ngx-qrcode-styling>
         </div>
 
         <p class="main-right-info-text" *ngIf="!smartQrData">
