--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -188,17 +188,18 @@
           <img src="../../../assets/profile-settings.png" alt="" />
         </div>
       </div>
-      <div class="imp-banner">
+      <div
+        class="imp-banner"
+        style="display: flex; justify-content: start; gap: 10px"
+      >
+        <span style="font-weight: 400; color: black; width: 150px"
+          ><img src="../../../assets/info-icon.png" /> Important Note:</span
+        >
         <p>
-          <span style="font-weight: 400; color: black"
-            ><img src="../../../assets/info-icon.png" /> Important Note:</span
-          >
           Please note that “not sent” , might be because target is not valid
           mobile or international number or your settings are configured not be
-          send this Message type by SMS.
-          <br />
-          Device sending is limited to avoid bans , these limits are gradually
-          reduced to mitigate that risk.
+          send this Message type by SMS. Device sending is limited to avoid bans
+          , these limits are gradually reduced to mitigate that risk.
         </p>
       </div>
     </ng-container>
