--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -130,12 +130,15 @@
       <img height="15px" width="15px" src="../../../assets/info-icon.png" /> Set
       Up Your Universal QR Code
     </h2>
-    <div class="note-banner">
-      <p>
-        <span style="font-weight: 400; color: black"
-          ><img style="width: 15px" src="../../../assets/info-icon.png" />
-          Important Note:
-        </span>
+    <div
+      class="note-banner"
+      style="display: flex; justify-content: start; gap: 10px"
+    >
+      <span style="font-weight: 400; color: black"
+        ><img style="width: 15px" src="../../../assets/info-icon.png" />
+        Important Note:
+      </span>
+      <p style="text-align: left">
         Create a Universal QR Code for instant taxi bookings, allowing users to
         scan and access the Taxi Messages chatbot seamlessly. Easily customize
         your QR, update details anytime, and download it in PDF, PNG, or JPG
