--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -192,10 +192,10 @@
         class="imp-banner"
         style="display: flex; justify-content: start; gap: 10px"
       >
-        <span style="font-weight: 400; color: black; width: 150px"
+        <span style="font-weight: 400; color: black; width: 130px"
           ><img src="../../../assets/info-icon.png" /> Important Note:</span
         >
-        <p>
+        <p style="margin-bottom: 0">
           Please note that “not sent” , might be because target is not valid
           mobile or international number or your settings are configured not be
           send this Message type by SMS. Device sending is limited to avoid bans
