--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -356,7 +356,7 @@
         </button> -->
         <button
           *ngIf="!btn5"
-          style="height: 45px; width: fit-content; align-items: center"
+          style="width: fit-content; align-items: center"
           (click)="startEdit('btn5')"
         >
           Update
@@ -424,7 +424,7 @@
     </span> -->
     </div>
     <div class="top" style="display: flex; gap: 10px; justify-content: start">
-      <span style="font-weight: 500; color: black; width: 300px"
+      <span style="font-weight: 500; color: black; width: 250px"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           width="15"
