--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -368,7 +368,7 @@
     class="note-banner"
     style="display: flex; gap: 10px"
   >
-    <span style="font-weight: 400; color: black; display: inline">
+    <span style="font-weight: 400; color: black; display: inline; width: 140px">
       <img src="../../../assets/note-icon.png" /> Importent Note:
 
       <!-- <button (click)="toggleBanner()">
@@ -377,8 +377,8 @@
     </span>
     <p style="font-size: 14px; font-weight: 300; margin-bottom: 0">
       Please note that “not sent” , might be because target is not valid mobile
-      or international number or your settings are configured not be send <br />
-      this Message type by SMS. Device sending is limited to avoid bans , these
+      or international number or your settings are configured not be send this
+      Message type by SMS. Device sending is limited to avoid bans , these
       limits are gradually reduced to mitigate that risk.
     </p>
   </div>
