--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -335,7 +335,7 @@
       <strong
         ><img src="../../../assets/info-icon.png" /> Important Note:
       </strong>
-      <p>
+      <p style="text-align: left">
         Create a Universal QR Code for instant taxi bookings, allowing users to
         scan and access the Taxi Messages chatbot seamlessly. Easily customize
         your QR, update details anytime, and download it in PDF, PNG, or JPG
